--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lotnisko</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <link rel="stylesheet" href="css/jquery-ui.css">
+    <link rel="stylesheet" href="static/css/jquery-ui.css">
     <style>
         .ui-autocomplete {
             max-height: 200px;
@@ -3763,9 +3763,9 @@
         })
             var wasInSearch = false
             var searchedValue = ""
-            var linkToAccepted = "gfx/ok.png"
-            var linkNotAccepted = "gfx/x.png"
-            var linkConditionally = "gfx/warning.png"
+            var linkToAccepted = "static/gfx/ok.png"
+            var linkNotAccepted = "static/gfx/x.png"
+            var linkConditionally = "static/gfx/warning.png"
 
             function handle(e) {
                 if (e.keyCode === 13) {
