--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lotnisko</title>
-    <link rel="stylesheet" src="static/css/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <link rel="stylesheet" src="static/css/jquery-ui.css">
+    <link rel="stylesheet" href="static/css/jquery-ui.css">
     <style>
         .ui-autocomplete {
             max-height: 200px;
