dodano link do fanpage

--- a/static/index.html
+++ b/static/index.html
@@ -3837,7 +3837,7 @@
         <input onkeypress="handle(event)" id="search" type="text" placeholder="Nazwa przedmiotu..." />
         <img id = "enter" onclick="sendEnteredPhrase()"src = "https://static.thenounproject.com/png/620845-200.png"/>
         <div id = "socialMedias">
-            <a href = "https://www.facebook.com/"><img src = "https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png"/></a>
+            <a href = "https://www.facebook.com/Packyourbag-109337594166249/?view_public_for=109337594166249"><img src = "https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png"/></a>
             <a href = "https://twitter.com/?lang=pl"><img src = "https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-twitter-512.png"/></a>
         </div>
     </div>
