--- a/static/index.html
+++ b/static/index.html
@@ -3896,7 +3896,7 @@
     </div>
     <div id="footer">
         <div id="adInFooter"></div>
-        <p>Powyższy wykaz ma charakter wyłącznie informacyjny i jego celem jest ułatwienie pasażerom sprawnego odbycia
+        <p>Powyższy wykaz ma charakter wyłącznie informacyjny i jego przeznaczeniem jest ułatwienie pasażerom sprawnego odbycia
             podróży. Prosimy jednakże pamiętać, że operator kontroli bezpieczeństwa dokonuje samodzielnej decyzji o
             dopuszczeniu
             przedmiotu na pokład i pasażer ponosi odpowiedzialność za swoje mienie.</p>
