--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="/css/jquery-ui.css">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script data-ad-client="ca-pub-1538658242858314" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link type="text/css" rel="stylesheet" href="/css/style.css">
     <style>
         .ui-autocomplete {
