location of server in index

--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
         $(document).ready(function () {
 
             $.ajax({
-                url: "/getItemData",
+                url: "https://packyourbag.pl/getItemData",
                 type: "POST",
                 success: function (data) {
                     console.log(data)
