--- a/static/index.html
+++ b/static/index.html
@@ -214,19 +214,13 @@
         <div id="luggage">
             <div id="adLeft"></div>
             <div id="main">
-                <h1>Bagaż Główny
-                    <br>
-                    Rejestrowany
-                </h1>
+                <h1>Bagaż Główny / Rejestrowany</h1>
                 <img id="mainCheck" src="" />
-                <p id="mainInfo"><br /></p>
+                <p id="mainInfo"></p>
             </div>
             <div id="adMid"></div>
             <div id="hand">
-                <h1>Bagaż Podręczny
-                    <br />
-                    Kabinowy
-                </h1>
+                <h1>Bagaż Podręczny / Kabinowy</h1>
                 <img id="handCheck" src="" />
                 <p id="handInfo">Tylko w pojemnikach, do pojemności 100 ml</p>
             </div>
