--- a/static/index.html
+++ b/static/index.html
@@ -207,7 +207,7 @@
             <div id="socialMedias">
                 <a href="https://www.facebook.com/Packyourbag-109337594166249/?view_public_for=109337594166249"><img
                         src="https://cdn3.iconfinder.com/data/icons/capsocial-round/500/facebook-512.png" /></a>
-                <a href="https://twitter.com/?lang=pl"><img
+                <a href="https://twitter.com/PackYourBag2"><img
                         src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-twitter-512.png" /></a>
             </div>
         </div>
