--- a/static/index.html
+++ b/static/index.html
@@ -61,6 +61,17 @@
                     console.log(xhr);
                 },
             });
+            $.ajax({
+                url: "https://localhost:3000/eng",
+                type: "POST",
+                success: function (data) {
+                    obj = JSON.parse(data)
+                    console.log(obj)
+                },
+                error: function (xhr, status, error) {
+                    console.log(xhr);
+                },
+            });
             var textAppearing
             $(".warning").on("mouseover", function () {
                 $(this).removeClass("warningBackSlideAnim")
