--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,26 @@
         var mainTemp = ""
         var handTemp = ""
         var obj = {}
+        var textTranslations = {
+            "gun-transport":[
+                "A person intending to transport firearms, gas weapons or ammunition is obliged to inform the carrier's representative at the airport of departure about this fact in order to declare this fact. A passenger carrying a firearm and / or ammunition is asked to go to a special room in order to check the firearm and the documents in it (a firearms license, and in international traffic - also a consent for its export issued by a Police authority or a certificate issued by the Polish Consul and the European Charter Weapons ).It should be noted that the firearms transported by air should be unloaded and secured, and the ammunition should be packed in such a way that it cannot hit the cartridge primer. Firearms, gas guns or ammunition shall be placed in checked baggage or suitable as checked baggage, which is transported on board an aircraft under the constant supervision of the Border Guard.",
+                "Osoba zamierzająca przewieźć broń palną, broń gazową lub amunicję jest obowiązana o tym fakcie poinformować przedstawiciela przewoźnika na lotnisku wylotu w celu zadeklarowania tego faktu. Pasażer przewożący broń palną i/lub amunicję poproszony jest o przejście do specjalnego pomieszczenia, celem sprawdzenia broni oraz posiadanych dokumentów (pozwolenie na broń, a w ruchu międzynarodowym – również zgodę na jej wywóz wydaną przez organ Policji lub zaświadczenie wydane przez Konsula RP oraz „Europejską Kartę Broni”). Należy zaznaczyć, że broń przewożona drogą lotniczą powinna być rozładowana i zabezpieczona, a amunicja zapakowana w sposób uniemożliwiający uderzenie w spłonkę naboju. Broń palną, broń gazową lub amunicję umieszcza się w bagażu rejestrowanym lub nadaje się jako bagaż rejestrowany, który jest transportowany na pokład statku powietrznego pod stałym nadzorem Straży Granicznej. "
+                ],
+            "security-control":[
+                "Luggage is subject to restrictions in terms of weight, size and content. The carrier has the right to set its own restrictions regarding, for example, the number or size of the luggage. Not all items can be shipped by air. Some of them must only be carried in main baggage, as they cannot be carried on board the aircraft in hand baggage. The list of permitted items and items prohibited for transport by air can be found on this website. During the security check of hand luggage, prohibited items are removed to special containers. If there are doubts as to whether a given item can be taken with us, it is better to leave it at home or in main luggage. All passengers undergo security screening at the airport in order to ensure an adequate level of security and safety in air transport. It consists of preventing from bringing on board the plane dangerous items that may pose a threat to air traffic.",
+                "Bagaż podlega ograniczeniom, zarówno jeśli chodzi o wagę, rozmiar, jak i zawartość. Przewoźnik ma prawo do ustalenia własnych ograniczeń dotyczących np. liczby lub wielkości przewożonego bagażu. Nie wszystkie przedmioty mogą być transportowane drogą lotniczą. Niektóre z nich należy przewozić tylko w bagażu rejestrowanym, gdyż nie można ich wnieść na pokład samolotu w bagażu podręcznym. Lista przedmiotów dozwolonych oraz przedmiotów zabronionych do transportu drogą lotniczą, znajduje się w naszej wyszukiwarce. W trakcie kontroli bezpieczeństwa bagażu podręcznego, przedmioty zabronione są usuwane do specjalnych pojemników. Jeśli zachodzą wątpliwości czy dany przedmiot możemy zabrać ze sobą, lepiej pozostawić go w domu lub nadać w bagażu rejestrowanym. Kontroli bezpieczeństwa na lotnisku poddawani są wszyscy pasażerowie w celu zapewnienia odpowiedniego poziomu ochrony i bezpieczeństwa w transporcie lotniczym. Polega ona na niedopuszczeniu do wniesienia na pokład samolotu przedmiotów niebezpiecznych, mogących stanowić zagrożenie w ruchu lotniczym. Pasażer jest dopuszczany do kontroli bezpieczeństwa po okazaniu karty pokładowej, czyli tzw. boarding`u, a czasami również, w zależności od wymogów firm dokonujących tej kontroli, dokumentu tożsamości: dowodu osobistego lub paszportu. "
+                ],
+            "unattended-luggage":[
+                "Remember never to leave your luggage unattended. Any luggage without visible supervision is treated by airport services as a potential threat, which is associated with the initiation of appropriate security procedures, such as evacuation of the port and the need to recognize the luggage by pyrotechnic specialists. These procedures are time consuming and can even result in flight delays. Packages and luggage of unknown contents should not be taken from strangers. Requests to 'carry something' should be denied. If you encounter a suspicious proposal, notify the airport services immediately. If you notice luggage or any other item / package unattended, immediately notify the appropriate services responsible for ensuring safety and public order at the airport. There is a 500 PLN fine for leaving the luggage unattended.",
+                "Należy pamiętać, aby nigdy nie pozostawiać bagażu bez opieki. Każdy bagaż bez widocznego nadzoru, traktowany jest przez służby lotniskowe jako potencjalne zagrożenie, co wiąże się ze wszczęciem odpowiednich procedur bezpieczeństwa, takich jak ewakuacja portu i konieczność rozpoznania bagażu przez specjalistów pirotechników. Procedury te są czasochłonne i mogą mieć wpływ nawet na opóźnienia lotów. Nie należy brać od nieznajomych osób pakunków i bagażu o nieznanej zawartości. Należy odmawiać prośbom o „przewiezienie czegoś”. W przypadku spotkania się z podejrzaną propozycją, należy natychmiast powiadomić służby lotniskowe. W przypadku zauważenia bagażu lub innego przedmiotu/pakunku bez opieki natychmiast powiadomić właściwe służby odpowiedzialne za zapewnienie bezpieczeństwa i porządku publicznego na lotnisku. Pozostawienie bagażu bez opieki jest karane mandatem karnym do 500 zł. "
+                ],
+        }
+        var headerTranslation = [
+            ["Search Bar","Wyszukiwarka"]
+            ["Security Control", "Kontrola bezpieczeństwa"],
+            ["Unattended Luggage", "Bagaż bez opieki"],
+            ["Gun Transport", "Przewóz broni"]
+        ]
         var language = "pl"
         $(document).ready(function () {
             $("a").on('click', function (event) {
@@ -144,6 +164,12 @@
             })
             $("#mainPrompt").text("Main Luggage")
             $("#handPrompt").text("Hand Luggage")
+            $("#unattended-luggage-text").text(textTranslations["unattended-luggage"][0])
+            $("#gun-transport-text").text(textTranslations["gun-transport"][0])
+            $("#security-control-text").text(textTranslations["security-control"][0])
+            for(let i = 0;i<4;i++){
+                $(".headerElem")[i].innerText = headerTranslation[i][0]
+            }
         }
         changeToPl = () => {
             $.ajax({
@@ -174,6 +200,9 @@
             })
             $("#mainPrompt").text("Bagaż Główny")
             $("#handPrompt").text("Bagaż Podręczny")
+            $("#unattended-luggage-text").text(textTranslations["unattended-luggage"][1])
+            $("#gun-transport-text").text(textTranslations["gun-transport"][1])
+            $("#security-control-text").text(textTranslations["security-control"][1])
         }
         function sendEnteredPhrase() {
             if (areItemsReady) {
@@ -329,7 +358,7 @@
         <div id="articleSection">
             <div id="security-control" class="articleBody">
                 <h3 class="articleHeader">Kontrola bezpieczeństwa</h3>
-                <div class="articleContent">
+                <div id="security-control-text" class="articleContent">
                     <div class="articleText">Bagaż podlega ograniczeniom, zarówno jeśli chodzi o wagę, rozmiar, jak i
                         zawartość. Przewoźnik
                         ma prawo do ustalenia własnych ograniczeń dotyczących np. liczby lub wielkości przewożonego
@@ -360,7 +389,7 @@
                 <h3 class="articleHeader">Bagaż bez opieki</h3>
                 <div class="articleContent">
                     <img class="articleImage" src="https://scontent-frt3-1.xx.fbcdn.net/v/t1.15752-9/118152798_797758014299275_3708519213475684069_n.png?_nc_cat=109&_nc_sid=b96e70&_nc_ohc=ujmNjWmrbIIAX9TyC18&_nc_ht=scontent-frt3-1.xx&oh=9d7d2a3041fe440b2149418a80f7f0d7&oe=5F6318BA" />
-                    <div class="articleText">Należy pamiętać, aby nigdy nie pozostawiać
+                    <div id = "unattended-luggage-text" class="articleText">Należy pamiętać, aby nigdy nie pozostawiać
                         bagażu bez opieki. Każdy bagaż bez widocznego nadzoru, traktowany jest przez służby lotniskowe
                         jako potencjalne zagrożenie, co wiąże
                         się ze wszczęciem odpowiednich procedur
@@ -383,7 +412,7 @@
             <div id = "gun-transport" class="articleBody">
                 <h3 class="articleHeader">Przewóz broni</h3>
                 <div class="articleContent">
-                    <div class="articleText">
+                    <div id = "gun-transport-text" class="articleText">
                         Osoba zamierzająca przewieźć broń palną, broń gazową lub amunicję jest obowiązana o tym fakcie
                         poinformować przedstawiciela przewoźnika na lotnisku wylotu w celu
                         zadeklarowania tego faktu. Pasażer przewożący broń palną i/lub amunicję poproszony jest o
